disable textareas on smaller screens bug fix

--- a/src/styles/pages/AnalysePage.css
+++ b/src/styles/pages/AnalysePage.css
@@ -108,7 +108,7 @@
     border: 0.3vh solid #0a4461;
     border-radius: 100px;
     background-color: white;
-    font-size: 2vh;
+    font-size: 1.8vh;
     width: 26vh;
     color: #0a4461;
     display: flex; /* Add Flexbox */
